--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -108,7 +108,7 @@
   .facility-images {
     padding: 3rem;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 80px;
     margin-top: 20px;
   }
@@ -127,12 +127,13 @@
   height: 100%;
   object-fit: cover; /* Ensures the image covers the area without distortion */
   display: block;
-  transition: filter 0.3s ease-in-out;
+  transition: 0.4s ease-in-out;
+  filter: brightness(1.3);
 }
   
   .facility-card:hover img {
-    transform: scale(1.1);
-    filter: brightness(0.7);
+    transform: scale(1.2);
+    filter: brightness(0.4);
   }
   
   .overlay {
@@ -141,7 +142,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(63, 63, 63, 0.6);
     color: white;
     display: flex;
     flex-direction: column;
@@ -150,6 +151,7 @@
     justify-content: center;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
+    z-index: 3;
   }
   
   .facility-card:hover .overlay {
@@ -178,7 +180,7 @@
   .team-members {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 60px;
     flex-wrap: wrap;
   }
   
@@ -198,8 +200,8 @@
   }
   
   .team-photo {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     background-color: #ccc;
     border-radius: 50%;
     margin: 0 auto 15px;
@@ -208,8 +210,8 @@
   }
 
   .team-photo img {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     border: 0.5px solid #b8b8b8;
   }
@@ -217,10 +219,11 @@
   .team-member p {
     margin: 5px 0;
     color: #555;
+    font-size: 1.2rem;
   }
   
   .team-member strong {
-    font-size: 1.1rem;
+    font-size: 1.75rem;
     color: #222;
   }
   
