--- a/frontend/src/components/Policy/Policy.css
+++ b/frontend/src/components/Policy/Policy.css
@@ -5,6 +5,7 @@
     background-color: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    margin-top: 170px;
   }
   
   .policy-title {
