--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,4 +1,11 @@
+*{
+  padding: 0;
+  margin: 0;
+}
 
+Header {
+  margin-top: -1;
+}
 .image-container {
     position: relative;
     width: 100%;
@@ -11,6 +18,10 @@
     height: 100%;
     object-fit: cover; 
     filter: brightness(0.4);
+}
+
+.overlay-content .welcome-text span{
+  font-size: 8rem;
 }
 
 .overlay-content {
@@ -36,7 +47,7 @@
 
   .slideshow {
     padding: 3rem;
-    width: 80%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -45,9 +56,13 @@
     margin: 0 auto;
   }
 
+  .slideshow h3 {
+    font-size: 2.5rem;
+  }
+
   .brief {
     padding: 3rem;
-    width: 80%;
+    width: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -58,12 +73,12 @@
 
   .brief h3 {
     text-align: center;
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
 
   .brief p {
     text-align: justify;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
   .charges-container {
@@ -78,7 +93,7 @@
   }
 
   .charges-container table {
-    width: 100%;
+    width: 70%;
     border-collapse: collapse; /* Ensures borders don’t double up */
     margin-top: 10px;
   }
@@ -103,13 +118,20 @@
   .facility-glimpse {
     text-align: center;
     padding: 3rem;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
   }
   
   .facility-images {
+    width: 50%;
     padding: 3rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 80px;
+    justify-content: center;
+    align-items: center;
     margin-top: 20px;
   }
   
@@ -127,8 +149,9 @@
   height: 100%;
   object-fit: cover; /* Ensures the image covers the area without distortion */
   display: block;
+  z-index: 2;
   transition: 0.4s ease-in-out;
-  filter: brightness(1.3);
+  filter: brightness(1.1);
 }
   
   .facility-card:hover img {
@@ -149,6 +172,7 @@
     text-transform: uppercase;
     align-items: center;
     justify-content: center;
+    text-align: center;
     opacity: 0;
     transition: opacity 0.3s ease-in-out;
     z-index: 3;
